feat: intial fuzzy model

--- a/implementation/04_PCA_&_Transform_To_Modelling_Format.ipynb
+++ b/implementation/04_PCA_&_Transform_To_Modelling_Format.ipynb
@@ -927,7 +927,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (.venv)",
    "language": "python",
    "name": ".venv"
   },
