--- a/implementation/07_HyperParameterTuning_LSTM_RNN.ipynb
+++ b/implementation/07_HyperParameterTuning_LSTM_RNN.ipynb
@@ -73,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "2be48824-1f75-4a05-b386-3f70d66a5185",
    "metadata": {},
    "outputs": [
@@ -83,13 +83,13 @@
      "text": [
       "/Users/nikhilrazab-sekh/Desktop/simpful_btc/implementation/.venv/lib/python3.9/site-packages/urllib3/__init__.py:35: NotOpenSSLWarning: urllib3 v2 only supports OpenSSL 1.1.1+, currently the 'ssl' module is compiled with 'LibreSSL 2.8.3'. See: https://github.com/urllib3/urllib3/issues/3020\n",
       "  warnings.warn(\n",
-      "[I 2024-03-18 22:59:25,536] A new study created in memory with name: no-name-caaa2c31-beeb-4d87-a13e-15a8dae8c805\n"
+      "[I 2024-03-18 23:42:42,390] A new study created in memory with name: no-name-4cb005ab-0ed4-452e-b98f-a5ea757d0c05\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "6c9fdbba806d4051921de318449e6cd1",
+       "model_id": "a89dcdcaf0d7499cbc5335a615c12d8f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -114,10 +114,49 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[I 2024-03-18 23:04:50,981] Trial 0 finished with value: 0.008750918321311474 and parameters: {'units': 50, 'activation': 'relu', 'learning_rate': 0.00018385008016090357, 'batch_size': 32}. Best is trial 0 with value: 0.008750918321311474.\n",
-      "[I 2024-03-18 23:09:06,439] Trial 1 finished with value: 0.00778465811163187 and parameters: {'units': 50, 'activation': 'relu', 'learning_rate': 0.0024869512390378475, 'batch_size': 64}. Best is trial 1 with value: 0.00778465811163187.\n",
-      "[I 2024-03-18 23:13:25,929] Trial 2 finished with value: 0.0033894293010234833 and parameters: {'units': 50, 'activation': 'relu', 'learning_rate': 0.0036323905906861884, 'batch_size': 64}. Best is trial 2 with value: 0.0033894293010234833.\n",
-      "[I 2024-03-18 23:28:11,075] Trial 3 finished with value: 0.005231366027146578 and parameters: {'units': 150, 'activation': 'tanh', 'learning_rate': 0.002739119041734605, 'batch_size': 32}. Best is trial 2 with value: 0.0033894293010234833.\n"
+      "[I 2024-03-18 23:52:40,042] Trial 0 finished with value: 0.0016602873802185059 and parameters: {'units': 150, 'activation': 'tanh', 'learning_rate': 0.0005699401056155138, 'batch_size': 128}. Best is trial 0 with value: 0.0016602873802185059.\n",
+      "[I 2024-03-19 00:04:35,491] Trial 1 finished with value: 0.00046483927872031927 and parameters: {'units': 100, 'activation': 'tanh', 'learning_rate': 0.00015051111249499415, 'batch_size': 32}. Best is trial 1 with value: 0.00046483927872031927.\n",
+      "[I 2024-03-19 00:17:23,549] Trial 2 finished with value: 0.0038473824970424175 and parameters: {'units': 150, 'activation': 'relu', 'learning_rate': 0.00020924432249771975, 'batch_size': 64}. Best is trial 1 with value: 0.00046483927872031927.\n",
+      "[I 2024-03-19 00:21:28,236] Trial 3 finished with value: 0.0014548702165484428 and parameters: {'units': 50, 'activation': 'relu', 'learning_rate': 0.00011872476903671935, 'batch_size': 64}. Best is trial 1 with value: 0.00046483927872031927.\n",
+      "[I 2024-03-19 00:28:00,052] Trial 4 finished with value: 0.008504552766680717 and parameters: {'units': 100, 'activation': 'tanh', 'learning_rate': 0.00809362861136003, 'batch_size': 128}. Best is trial 1 with value: 0.00046483927872031927.\n",
+      "[I 2024-03-19 00:36:39,389] Trial 5 finished with value: 0.006539441179484129 and parameters: {'units': 100, 'activation': 'relu', 'learning_rate': 0.0011016518060755595, 'batch_size': 64}. Best is trial 1 with value: 0.00046483927872031927.\n",
+      "[I 2024-03-19 00:50:09,462] Trial 6 finished with value: 0.006091439165174961 and parameters: {'units': 150, 'activation': 'tanh', 'learning_rate': 0.00014877054742193358, 'batch_size': 64}. Best is trial 1 with value: 0.00046483927872031927.\n",
+      "[I 2024-03-19 00:53:59,722] Trial 7 finished with value: 0.02498544752597809 and parameters: {'units': 50, 'activation': 'relu', 'learning_rate': 0.00012695230930418266, 'batch_size': 128}. Best is trial 1 with value: 0.00046483927872031927.\n",
+      "[I 2024-03-19 01:09:55,752] Trial 8 finished with value: 0.004617282655090094 and parameters: {'units': 150, 'activation': 'tanh', 'learning_rate': 0.008157791169835603, 'batch_size': 32}. Best is trial 1 with value: 0.00046483927872031927.\n",
+      "[I 2024-03-19 01:14:12,045] Trial 9 finished with value: 0.002192156622186303 and parameters: {'units': 50, 'activation': 'tanh', 'learning_rate': 0.002231934681845389, 'batch_size': 64}. Best is trial 1 with value: 0.00046483927872031927.\n",
+      "Best parameters: {'units': 100, 'activation': 'tanh', 'learning_rate': 0.00015051111249499415, 'batch_size': 32}\n",
+      "Epoch 1/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 34ms/step - loss: 0.0376\n",
+      "Epoch 2/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 34ms/step - loss: 8.0036e-04\n",
+      "Epoch 3/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 33ms/step - loss: 4.9066e-04\n",
+      "Epoch 4/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 33ms/step - loss: 3.6826e-04\n",
+      "Epoch 5/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m60s\u001b[0m 34ms/step - loss: 2.9797e-04\n",
+      "Epoch 6/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 34ms/step - loss: 2.3442e-04\n",
+      "Epoch 7/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 33ms/step - loss: 2.2191e-04\n",
+      "Epoch 8/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 33ms/step - loss: 1.0926e-04\n",
+      "Epoch 9/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 33ms/step - loss: 1.1968e-04\n",
+      "Epoch 10/10\n",
+      "\u001b[1m1769/1769\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m59s\u001b[0m 33ms/step - loss: 9.6565e-05\n",
+      "\u001b[1m439/439\u001b[0m \u001b[32m━━━━━━━━━━━━━━━━━━━━\u001b[0m\u001b[37m\u001b[0m \u001b[1m5s\u001b[0m 12ms/step\n"
+     ]
+    },
+    {
+     "ename": "NameError",
+     "evalue": "name 'y_pred' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[2], line 62\u001b[0m\n\u001b[1;32m     60\u001b[0m validation_generator \u001b[38;5;241m=\u001b[39m TimeseriesGenerator(X_test_scaled, y_test_scaled, length\u001b[38;5;241m=\u001b[39mn_input, batch_size\u001b[38;5;241m=\u001b[39mbest_params[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mbatch_size\u001b[39m\u001b[38;5;124m'\u001b[39m])\n\u001b[1;32m     61\u001b[0m y_pred_scaled \u001b[38;5;241m=\u001b[39m model\u001b[38;5;241m.\u001b[39mpredict(validation_generator)\n\u001b[0;32m---> 62\u001b[0m y_test_original \u001b[38;5;241m=\u001b[39m y_test\u001b[38;5;241m.\u001b[39mvalues\u001b[38;5;241m.\u001b[39mflatten()[:\u001b[38;5;28mlen\u001b[39m(\u001b[43my_pred\u001b[49m)]  \u001b[38;5;66;03m# Adjust length if necessary\u001b[39;00m\n\u001b[1;32m     63\u001b[0m y_pred \u001b[38;5;241m=\u001b[39m scaler_y\u001b[38;5;241m.\u001b[39minverse_transform(y_pred_scaled)\n\u001b[1;32m     65\u001b[0m \u001b[38;5;66;03m# Calculate RMSE and MAPE\u001b[39;00m\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'y_pred' is not defined"
      ]
     }
    ],
