--- a/implementation/10_Fuzzy_FreeForm_Simpful.ipynb
+++ b/implementation/10_Fuzzy_FreeForm_Simpful.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "id": "7a11b645-d443-465d-8eec-8f6979472c64",
    "metadata": {},
    "outputs": [],
@@ -30,7 +30,7 @@
     "y_test.index = pd.to_datetime(X_test['datetime'])\n",
     "\n",
     "# Exclude non-numerical columns before scaling\n",
-    "columns_to_scale = X_train.columns.difference(['year', 'month', 'day', 'hour', 'datetime'])\n",
+    "b = X_train.columns.difference(['year', 'month', 'day', 'hour', 'datetime'])\n",
     "\n",
     "# Initialize the scaler for the features\n",
     "scaler_X = MinMaxScaler()\n",
@@ -49,8 +49,244 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 22,
+   "id": "2ccf84b5-fb74-453a-87db-94e2b0a6a270",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "                                         Feature Name  \\\n",
+      "0                      central_bank_policy_rate_prcnt   \n",
+      "1                            classification_numerical   \n",
+      "2                                         cpi_monthly   \n",
+      "3                                           dia_close   \n",
+      "4                                          dia_volume   \n",
+      "5                                 domestic_credit_gdp   \n",
+      "6                                    durables_monthly   \n",
+      "7                            federal_funds_rate_daily   \n",
+      "8                     foreign_direct_investment_value   \n",
+      "9                             gdp_growth_annual_prcnt   \n",
+      "10                                          gld_close   \n",
+      "11                                         gld_volume   \n",
+      "12  individuals_using_the_internet_prcnt_of_popula...   \n",
+      "13                               inflation_rate_value   \n",
+      "14                                               macd   \n",
+      "15       mobile_cellular_subscriptions_per_100_people   \n",
+      "16                            nonfarm_payroll_monthly   \n",
+      "17                                               open   \n",
+      "18         personal_remittances_received_prcnt_of_gdp   \n",
+      "19                      real_gdp_per_capita_quarterly   \n",
+      "20                                 real_gdp_quarterly   \n",
+      "21                               retail_sales_monthly   \n",
+      "22                                                rsi   \n",
+      "23                                             sma_30   \n",
+      "24                                          spy_close   \n",
+      "25                                         spy_volume   \n",
+      "26                           stock_market_index_value   \n",
+      "27                                      tariffs_value   \n",
+      "28                        total_public_debt_gdp_value   \n",
+      "29                                trade_balance_value   \n",
+      "30                            trade_in_services_value   \n",
+      "31                               treasury_yield_daily   \n",
+      "32                               unemployment_monthly   \n",
+      "33                            unemployment_rate_value   \n",
+      "34                                              value   \n",
+      "35                                             volume   \n",
+      "36                         Scaled Target Variable (y)   \n",
+      "\n",
+      "                              Description  \n",
+      "0                                     NaN  \n",
+      "1                                     NaN  \n",
+      "2                                     NaN  \n",
+      "3                                     NaN  \n",
+      "4                                     NaN  \n",
+      "5                                     NaN  \n",
+      "6                                     NaN  \n",
+      "7                                     NaN  \n",
+      "8                                     NaN  \n",
+      "9                                     NaN  \n",
+      "10                                    NaN  \n",
+      "11                                    NaN  \n",
+      "12                                    NaN  \n",
+      "13                                    NaN  \n",
+      "14                                    NaN  \n",
+      "15                                    NaN  \n",
+      "16                                    NaN  \n",
+      "17                                    NaN  \n",
+      "18                                    NaN  \n",
+      "19                                    NaN  \n",
+      "20                                    NaN  \n",
+      "21                                    NaN  \n",
+      "22                                    NaN  \n",
+      "23                                    NaN  \n",
+      "24                                    NaN  \n",
+      "25                                    NaN  \n",
+      "26                                    NaN  \n",
+      "27                                    NaN  \n",
+      "28                                    NaN  \n",
+      "29                                    NaN  \n",
+      "30                                    NaN  \n",
+      "31                                    NaN  \n",
+      "32                                    NaN  \n",
+      "33                                    NaN  \n",
+      "34                                    NaN  \n",
+      "35                                    NaN  \n",
+      "36  Represents the scaled target variable  \n"
+     ]
+    }
+   ],
+   "source": [
+    "import pandas as pd\n",
+    "\n",
+    "# List of column names from columns_to_scale for X features\n",
+    "feature_names = list(columns_to_scale)\n",
+    "\n",
+    "# Add a placeholder for the scaled target variables\n",
+    "feature_names.append(\"Scaled Target Variable (y)\")\n",
+    "\n",
+    "# Create a DataFrame for displaying in a table format\n",
+    "table_data = [{\"Feature Name\": name} for name in feature_names]\n",
+    "\n",
+    "# Adding description for y_train_scaled and y_test_scaled as they do not have feature names\n",
+    "table_data[-1][\"Description\"] = \"Represents the scaled target variable\"\n",
+    "\n",
+    "# Display the table\n",
+    "table_df = pd.DataFrame(table_data)\n",
+    "print(table_df)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "id": "ceada8d4-ed21-417c-a985-075207a7ca24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Selected features: ['real_gdp_per_capita_quarterly', 'spy_close', 'classification_numerical', 'federal_funds_rate_daily']\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "import random\n",
+    "\n",
+    "def select_random_features(X_scaled, feature_names, num_features):\n",
+    "    \"\"\"\n",
+    "    Select a random subset of features from the scaled data.\n",
+    "    \n",
+    "    Args:\n",
+    "    - X_scaled: numpy array of scaled features.\n",
+    "    - feature_names: list of all feature names.\n",
+    "    - num_features: number of features to select.\n",
+    "    \n",
+    "    Returns:\n",
+    "    - X_subset: subset of the scaled features.\n",
+    "    - selected_feature_names: names of the selected features.\n",
+    "    \"\"\"\n",
+    "    # Ensure num_features does not exceed the number of available features\n",
+    "    num_features = min(num_features, len(feature_names))\n",
+    "    \n",
+    "    # Generate random indices for feature selection\n",
+    "    selected_indices = random.sample(range(len(feature_names)), num_features)\n",
+    "    \n",
+    "    # Select the features based on the random indices\n",
+    "    X_subset = X_scaled[:, selected_indices]\n",
+    "    \n",
+    "    # Extract the names of the selected features\n",
+    "    selected_feature_names = [feature_names[i] for i in selected_indices]\n",
+    "    \n",
+    "    return X_subset, selected_feature_names\n",
+    "\n",
+    "# Example usage:\n",
+    "num_features_to_select = 4\n",
+    "X_subset, selected_feature_names = select_random_features(X_train_scaled, columns_to_scale, num_features_to_select)\n",
+    "print(\"Selected features:\", selected_feature_names)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "id": "29e45d1e-16ea-4744-be32-4744aba9a4a5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "  ____  __  _  _  ____  ____  _  _  __   \n",
+      " / ___)(  )( \\/ )(  _ \\(  __)/ )( \\(  ) v2.12.0 \n",
+      " \\___ \\ )( / \\/ \\ ) __/ ) _) ) \\/ (/ (_/\\ \n",
+      " (____/(__)\\_)(_/(__)  (__)  \\____/\\____/\n",
+      "\n",
+      " https://github.com/aresio/simpful\n",
+      "\n",
+      " * Detected Sugeno model type\n",
+      "Fuzzy prediction: 0.5753061156183121\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "from simpful import *\n",
+    "from sklearn.cluster import KMeans\n",
+    "\n",
+    "# Perform KMeans clustering to find cluster centers for Gaussian membership functions\n",
+    "kmeans = KMeans(n_clusters=num_clusters, random_state=0).fit(X_train_scaled[:, feature_indices])\n",
+    "centers = kmeans.cluster_centers_\n",
+    "\n",
+    "# Initialize the Fuzzy Inference System\n",
+    "FS = FuzzySystem()\n",
+    "\n",
+    "# Correctly adding linguistic variables with their fuzzy sets\n",
+    "for i, feature_name in enumerate(selected_feature_names):\n",
+    "    fuzzy_sets = []\n",
+    "    for cluster_index, center in enumerate(centers[:, i]):\n",
+    "        # Create a Gaussian fuzzy set for each cluster center\n",
+    "        fs = GaussianFuzzySet(mu=center, sigma=0.1, term=f\"cluster_{cluster_index+1}\")\n",
+    "        fuzzy_sets.append(fs)\n",
+    "    # Create and add the linguistic variable with its fuzzy sets\n",
+    "    LV = LinguisticVariable(fuzzy_sets, concept=feature_name)\n",
+    "    FS.add_linguistic_variable(feature_name, LV)\n",
+    "\n",
+    "# Define an output variable with a dummy fuzzy set\n",
+    "dummy_fs = GaussianFuzzySet(mu=0, sigma=1, term=\"dummy\")\n",
+    "dummy_lv = LinguisticVariable([dummy_fs], concept=\"dummy_output\")\n",
+    "FS.add_linguistic_variable(\"PricePrediction\", dummy_lv)\n",
+    "\n",
+    "# Define the output function for the system (ensure it matches your model's logic)\n",
+    "FS.set_output_function(\"PricePrediction\", \" + \".join([f\"0.25*{name}\" for name in selected_feature_names]))\n",
+    "\n",
+    "# Define fuzzy rules based on your model's logic\n",
+    "rules = [\n",
+    "    # Example rules - modify according to your system's logic\n",
+    "    \"IF (real_gdp_per_capita_quarterly IS cluster_1) THEN (PricePrediction IS PricePrediction)\",\n",
+    "    \"IF (spy_close IS cluster_2) THEN (PricePrediction IS PricePrediction)\",\n",
+    "    # Add more rules as needed\n",
+    "]\n",
+    "FS.add_rules(rules)\n",
+    "\n",
+    "# Function to make predictions with the FIS\n",
+    "def predict_with_fis(FS, input_features):\n",
+    "    for feature_name, value in zip(selected_feature_names, input_features):\n",
+    "        FS.set_variable(feature_name, value)\n",
+    "    result = FS.inference([\"PricePrediction\"])\n",
+    "    return result[\"PricePrediction\"]\n",
+    "\n",
+    "# Example usage\n",
+    "input_features = X_test_scaled[0, feature_indices]  # Adjust indices accordingly\n",
+    "prediction = predict_with_fis(FS, input_features)\n",
+    "print(\"Fuzzy prediction:\", prediction)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "f3951ea2-18ee-45e0-803e-1d9cfd0b7133",
+   "id": "9289f627-e602-4002-b997-f9d07cb3de13",
    "metadata": {},
    "outputs": [],
    "source": []
