chore: minor cleaning

--- a/implementation/01_data_integration.ipynb
+++ b/implementation/01_data_integration.ipynb
@@ -5025,7 +5025,7 @@
     "# We'll use a left join to ensure all rows in merged_df are kept and matched with the daily data from df_fear_and_greed_index\n",
     "final_df = pd.merge(merged_df, df_fear_and_greed_index[['date', 'value', 'classification']], on='date', how='left', suffixes=('', '_fear_greed'))\n",
     "\n",
-    "# Now, you can drop the additional date column if it's no longer needed\n",
+    "# Now, we can drop the additional date column if it's no longer needed\n",
     "final_df.drop('date', axis=1, inplace=True)\n",
     "\n",
     "# we wish to forward fill missing values for the fear and greed index data throughout each day, like this:\n",
@@ -5165,7 +5165,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (.venv)",
    "language": "python",
    "name": ".venv"
   },
