--- a/implementation/02_data_inspection.ipynb
+++ b/implementation/02_data_inspection.ipynb
@@ -495,7 +495,7 @@
     }
    ],
    "source": [
-    "# Call the functions on your dataset\n",
+    "# Call the functions on our dataset\n",
     "first_measurement_times = first_measurement_time(df)\n",
     "average_intervals = average_interval_between_measurements(df)\n",
     "\n",
