--- a/implementation/03_exploratory_data_analysis.ipynb
+++ b/implementation/03_exploratory_data_analysis.ipynb
@@ -442,12 +442,10 @@
     "import os\n",
     "import pandas as pd\n",
     "\n",
-    "# Assuming 'df' is your DataFrame\n",
-    "# Ensure the /images folder exists\n",
     "images_folder = \"images\"\n",
     "os.makedirs(images_folder, exist_ok=True)\n",
     "\n",
-    "# Your numerical features list remains the same\n",
+    "# numerical features list remains the same\n",
     "numerical_features = [\n",
     "    'low', 'high', 'open', 'close', 'volume', 'sma_30', 'rsi', 'macd',\n",
     "    'dia_open', 'dia_high', 'dia_low', 'dia_close', 'dia_volume',\n",
@@ -656,7 +654,7 @@
     "df['timestamp'] = pd.to_datetime(df['timestamp'])\n",
     "df_sorted = df.sort_values('timestamp')\n",
     "\n",
-    "# Adjust the palette to include all classifications present in your dataset\n",
+    "# Adjust the palette to include all classifications present in our dataset\n",
     "palette = {\n",
     "    \"Fear\": \"#ff2e63\",\n",
     "    \"Greed\": \"#08d9d6\",\n",
@@ -698,7 +696,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (.venv)",
    "language": "python",
    "name": ".venv"
   },
