--- a/implementation/04_PCA_&_Transform_To_Modelling_Format.ipynb
+++ b/implementation/04_PCA_&_Transform_To_Modelling_Format.ipynb
@@ -394,7 +394,7 @@
     "            'trade_in_services_value', 'unemployment_rate_value', \n",
     "            'classification_numerical', 'value']  # Including 'value'\n",
     "\n",
-    "# Assuming 'df' is your DataFrame\n",
+    "# Assuming 'df' is our DataFrame\n",
     "x = df.loc[:, features].values\n",
     "\n",
     "# Standardizing the features\n",
