--- a/implementation/06_RNN_model_BTC.ipynb
+++ b/implementation/06_RNN_model_BTC.ipynb
@@ -11,7 +11,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "# Paths to the prepped data files\n",
-    "base_path = './data/prepped_data/'  # Adjusted base path to where your files are now\n",
+    "base_path = './data/prepped_data/'  # Adjusted base path to where our files are now\n",
     "X_train_path = base_path + 'X_train.csv'\n",
     "X_test_path = base_path + 'X_test.csv'\n",
     "y_train_path = base_path + 'y_train.csv'\n",
