--- a/implementation/07_HyperParameterTuning_LSTM_RNN.ipynb
+++ b/implementation/07_HyperParameterTuning_LSTM_RNN.ipynb
@@ -19,7 +19,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "# Paths to the prepped data files\n",
-    "base_path = './data/prepped_data/'  # Adjusted base path to where your files are now\n",
+    "base_path = './data/prepped_data/'  # Adjusted base path to where our files are now\n",
     "X_train_path = base_path + 'X_train.csv'\n",
     "X_test_path = base_path + 'X_test.csv'\n",
     "y_train_path = base_path + 'y_train.csv'\n",
@@ -214,12 +214,11 @@
     "])\n",
     "model.compile(optimizer=Adam(learning_rate=best_params['learning_rate']), loss='mse')\n",
     "\n",
-    "# It's suggested to retrain your model here with the entire dataset or a combined train-validation set if applicable\n",
+    "# It's suggested to retrain our model here with the entire dataset or a combined train-validation set if applicable\n",
     "# Adjust batch_size based on best_params if it was part of the optimization\n",
     "train_generator = TimeseriesGenerator(X_train_scaled, y_train_scaled, length=n_input, batch_size=best_params['batch_size'])\n",
     "model.fit(train_generator, epochs=10, verbose=1)  # Or more epochs as needed\n",
     "\n",
-    "# Final evaluation, potentially on a separate test set if you have one\n",
     "validation_generator = TimeseriesGenerator(X_test_scaled, y_test_scaled, length=n_input, batch_size=best_params['batch_size'])\n",
     "y_pred_scaled = model.predict(validation_generator)\n",
     "y_test_original = y_test.values.flatten()[:len(y_pred)]  # Adjust length if necessary\n",
