--- a/implementation/09_Fuzzy_Hypertuned.ipynb
+++ b/implementation/09_Fuzzy_Hypertuned.ipynb
@@ -27,7 +27,7 @@
     "from fs import FuzzySystemLayer, create_fuzzy_model\n",
     "\n",
     "# Paths to the prepped data files\n",
-    "base_path = './data/prepped_data/'  # Adjusted base path to where your files are now\n",
+    "base_path = './data/prepped_data/'  # Adjusted base path to where our files are now\n",
     "X_train_path = base_path + 'X_train.csv'\n",
     "X_test_path = base_path + 'X_test.csv'\n",
     "y_train_path = base_path + 'y_train.csv'\n",
@@ -365,11 +365,9 @@
     "from sklearn.cluster import KMeans\n",
     "from sklearn.metrics import mean_squared_error\n",
     "from tqdm.auto import tqdm\n",
-    "# Assuming FS_Regressor has been imported from the fs module\n",
-    "\n",
     "\n",
     "# Determine the optimal number of clusters (e.g., using domain knowledge, elbow method, etc.)\n",
-    "n_clusters = 3  # This is a placeholder; adjust based on your analysis\n",
+    "n_clusters = 3  # This is a placeholder; adjust based on our analysis\n",
     "\n",
     "# Steps for cluster determination remain the same\n",
     "kmeans = KMeans(n_clusters=n_clusters, random_state=42)\n",
@@ -419,7 +417,7 @@
     "best_hyperparams = study.best_trial.params\n",
     "print(f\"Best hyperparameters: {best_hyperparams}\")\n",
     "\n",
-    "# Now, you can safely use `best_hyperparams` to retrain your model\n",
+    "# Now, we can safely use `best_hyperparams` to retrain our model\n",
     "best_model = create_fuzzy_model(\n",
     "    input_dim=X_train_scaled.shape[1],\n",
     "    cluster_centers=cluster_centers,\n",
