--- a/implementation/08_Fuzzy_Basic.ipynb
+++ b/implementation/08_Fuzzy_Basic.ipynb
@@ -36,7 +36,7 @@
     "from sklearn.preprocessing import MinMaxScaler\n",
     "\n",
     "# Paths to the prepped data files\n",
-    "base_path = './data/prepped_data/'  # Adjusted base path to where your files are now\n",
+    "base_path = './data/prepped_data/'  # Adjusted base path to where our files are now\n",
     "X_train_path = base_path + 'X_train.csv'\n",
     "X_test_path = base_path + 'X_test.csv'\n",
     "y_train_path = base_path + 'y_train.csv'\n",
@@ -308,7 +308,7 @@
     "\n",
     "\n",
     "# Determine the optimal number of clusters (e.g., using domain knowledge, elbow method, etc.)\n",
-    "n_clusters = 3  # This is a placeholder; adjust based on your analysis\n",
+    "n_clusters = 3  # This is a placeholder; adjust based on our analysis\n",
     "\n",
     "# Steps for cluster determination remain the same\n",
     "kmeans = KMeans(n_clusters=n_clusters, random_state=42)\n",
