--- a/implementation/05_Feature_analysis.ipynb
+++ b/implementation/05_Feature_analysis.ipynb
@@ -173,11 +173,9 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 4,
-   "id": "4c20e452-e663-4574-b4d3-eeae618b8ed8",
+   "cell_type": "markdown",
+   "id": "f2229f31-654a-4bcb-a0e5-af19a916199f",
    "metadata": {},
-   "outputs": [],
    "source": [
     "# SHAP"
    ]
@@ -259,7 +257,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": ".venv",
+   "display_name": "Python (.venv)",
    "language": "python",
    "name": ".venv"
   },
